--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/10-duty-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/10-duty-1-3.html
@@ -7,7 +7,7 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in D_COUNTER_TYP_LIST %}
+{% if counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、本合同生效后，甲方不履行合同义务，造成乙方损失的，应承担相应的赔偿责任。</p>
     <p>2、乙方有下列行为之一的，应按本合同所担保主合同借款数额的<strong><u>5％</u></strong>向甲方支付违约金；造成甲方损失的，应同时给予全额赔偿，对于拖欠的担保费，违约金、赔偿金，将按合同签订时，同期银行利率的<strong><u>4</u></strong>倍支付利息：</p>
     <p>（1）未取得本合同反担保所需的合法有效授权； </p>
@@ -16,6 +16,13 @@
     <p>（4）未经甲方书面同意擅自处分抵押财产，再次对抵押财产抵押的；</p>
     <p>（5）未按甲方要求恢复抵押财产价值或者提供相应的担保；</p>
     <p>（6）其他违反本合同约定或者影响甲方实现抵押权的行为。</p>
+{% elif counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
+    <p>乙方有下列行为之一的，应按本合同所担保主合同借款金额<strong><u>5％</u></strong>向甲方支付违约金；造成甲方损失的，应同时给予全额赔偿：</p>
+    <p>（1）未取得本合同反担保所需的合法有效授权；</p>
+    <p>（2）未按本合同约定提供真实、完整、有效的财务报表、公司章程或者其他相关资料、信息；</p>
+    <p>（3）发生本合同第四条第4项的情形，未立即通知甲方；</p>
+    <p>（4）实施本合同第四条第5项的行为，未事先征得甲方同意；</p>
+    <p>（5）其他违反本合同约定或者影响甲方实现保证反担保权的行为。</p>
 {% elif counter_warrant_typ == 11 %}
     <p>1、乙方有下列行为之一的，应按本合同所担保主合同借款数额的<strong><u>5％</u></strong>向甲方支付违约金；造成甲方损失的，应同时给予全额赔偿，对于拖欠的担保费、违约金、赔偿金，将按签订合同时，同期银行利率的<strong><u>4</u></strong>倍支付利息：</p>
     <p>（1）未取得本合同担保所需的合法有效授权；</p>
@@ -38,13 +45,6 @@
     <p>2、甲方有下列行为之一，造成乙方损失的，应当承担相应的赔偿责任：</p>
     <p>（1）因甲方保管不善导致权利凭证毁损、灭失的；</p>
     <p>（2）丙方履行主合同项下全部债务，或者乙方清偿所担保的主合同项下全部债权的，甲方不予返还乙方权利凭证的。</p>
-{% elif counter_typ in X_COUNTER_TYP_LIST %}
-    <p>乙方有下列行为之一的，应按本合同所担保主合同借款金额5％向甲方支付违约金；造成甲方损失的，应同时给予全额赔偿：</p>
-    <p>（1）未取得本合同反担保所需的合法有效授权；</p>
-    <p>（2）未按本合同约定提供真实、完整、有效的财务报表、公司章程或者其他相关资料、信息；</p>
-    <p>（3）发生本合同第四条第4项的情形，未立即通知甲方；</p>
-    <p>（4）实施本合同第四条第5项的行为，未事先征得甲方同意；</p>
-    <p>（5）其他违反本合同约定或者影响甲方实现保证反担保权的行为。</p>
 {% else %}
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
