--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/17-other-1.html
@@ -7,21 +7,21 @@
         (31, '应收质押'), (32, '股权质押'), (33, '票据质押'),
         (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->
 {% if notarization_typ %}
-<p>
-    {% if counter_typ in X_COUNTER_TYP_LIST %}
-        4、本合同正本一式肆份，甲、乙、丙三方各执壹份，公证处执壹份。具有同等的法律效力。
-    {% else %}
-        4、本合同正本一式伍份，甲、乙、丙三方各执壹份，登记机关执壹份，公证处执壹份。具有同等的法律效力。
-    {% endif %}
-</p>
+    <p>
+        {% if counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
+            4、本合同正本一式肆份，甲、乙、丙三方各执壹份，公证处执壹份。具有同等的法律效力。
+        {% else %}
+            4、本合同正本一式伍份，甲、乙、丙三方各执壹份，登记机关执壹份，公证处执壹份。具有同等的法律效力。
+        {% endif %}
+    </p>
 {% else %}
-<p>
-    {% if counter_typ in X_COUNTER_TYP_LIST %}
-        4、本合同正本一式叁份，甲、乙、丙三方各执壹份。具有同等的法律效力。
-    {% else %}
-        4、本合同正本一式肆份，甲、乙、丙三方各执壹份，登记机关壹份。具有同等的法律效力。
-    {% endif %}
-</p>
+    <p>
+        {% if counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
+            4、本合同正本一式叁份，甲、乙、丙三方各执壹份。具有同等的法律效力。
+        {% else %}
+            4、本合同正本一式肆份，甲、乙、丙三方各执壹份，登记机关壹份。具有同等的法律效力。
+        {% endif %}
+    </p>
 {% endif %}
 
 <p><strong>声明：甲方已采取合理方式提请乙、丙方注意本合同项下免除或限制其责任的条款，应乙方要求，甲方已经就本合同做了相应的条款说明。甲、乙、丙三方对本合同所有条款内容的理解不存在异议。</strong></p>
