--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/4-promise-y-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/4-promise-y-1-3.html
@@ -7,7 +7,7 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in X_COUNTER_TYP_LIST %}
+{% if counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
     <p>1、已按有关规定和程序取得本合同反担保所需要的授权。</p>
     <p>2、按要求向甲方提供真实、完整、有效的财务报表、公司章程或者其他相关资料、信息，并接受甲方对保证人生产经营和财务状况的监督检查。定期或随时向甲方提供反映本企业生产经营状况、资金、财务、债权债务情况的计划、统计、财务会计报表及有关文件资料（包括资产负债表、现金流量表、纳税证明、损益表、债权债务表、固定资产明细表等），并保证其真实性。</p>
     <p>3、丙方未按主合同约定履行债务的，乙方自愿履行保证责任。</p>
@@ -21,7 +21,7 @@
     <p><strong>5、实施下列行为之一的，乙方提前十五日书面通知债权人并征得甲方书面同意：</strong></p>
     <p><strong>（1）乙方改变资本结构或者经营体制，包括但不限于承包、租赁、股份制改造、联营、合并、分立、合资、减资、资产转让、申请重整、申请和解、申请破产；</strong></p>
     <p><strong>（2）乙方为第三人债务提供保证担保或者以其资产为自身或者第三人债务设定抵押、质押担保，可能影响其履行本合同项下保证责任的。</strong></p>
-{% elif counter_typ in D_COUNTER_TYP_LIST %}
+{% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、乙方已按有关规定和程序取得本合同担保所需的授权。</p>
     <p>2、乙方对抵押财产有充分、无争议的所有权或者处分权。</p>
     <p>3、抵押财产依法可以流通或者转让。</p>
@@ -39,7 +39,7 @@
 {% elif counter_warrant_typ == 11 %}
     <p>1、乙方已按有关规定和程序取得本合同担保所需要的授权。</p>
     <p>2、乙方用于出质的应收账款真实、完整、合法、有效，乙方合法拥有应收账款并享有处分权，乙方提供本质押反担保不损害任何第三人的合法利益，不违背乙方的法定与约定义务，应收账款不存在任何权利瑕疵。</p>
-    <p>3、出质的应收账款依法可以在市场上流通。</p>
+    <p>3、出质的应收账款依法可以流通或者转让。</p>
     <p><strong>4、出质的应收账款不存在已质押、被申请撤销、申请宣告无效、异议、查封、冻结、监管、诉讼、仲裁、挂失、止付等情形。</strong></p>
     <p>5、乙方已就本合同项下的出质事宜征得权利共有人的同意并提供权利共有人同意的书面文件。</p>
     <p>6、依据法律法规的规定及时缴纳与出质权利相关的各项费用，履行各项法定义务，按甲方要求进行权利期限续展，维持质权存续期间出质应收账款持续有效。</p>
@@ -51,7 +51,7 @@
 {% elif counter_warrant_typ == 21 or  counter_warrant_typ == 31 or  counter_warrant_typ == 55 %}
     <p>1、乙方已按有关规定和程序取得本合同担保所需要的授权。</p>
     <p>2、乙方对出质的权利拥有充分、无争议的所有权或者处分权，且权利基础关系无瑕疵。</p>
-    <p>3、出质的权利依法可以转让。</p>
+    <p>3、出质的权利依法可以流通或者转让。</p>
     <p><strong>4、出质的权利不存在已质押、被申请撤销、申请宣告无效、异议、查封、冻结、监管、诉讼、仲裁、挂失、止付等情形。</strong></p>
     <p>5、乙方已就本合同项下的出质事宜征得权利共有人的同意。</p>
     <p>6、依据法律法规的规定及时缴纳与出质权利相关的各项费用，履行各项法定义务，按甲方要求进行权利期限续展，维持质权存续期间出质权利持续有效。</p>
