--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/9-realize-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/9-realize-1-3.html
@@ -7,7 +7,7 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in X_COUNTER_TYP_LIST %}
+{% if counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
     <p>1、发生下列情形之一的，甲方有权要求乙方履行保证反担保责任：</p>
     <p>（1）主合同项下债务履行期限届满，贷款人未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主合同项下债务履行期限届满，以及贷款人依照国家法律法规规定或者主合同的约定宣布主合同项下债权提前到期的情形或甲方依据委托合同的相关规定要求丙方在规定的期限内提前偿还全部借款本息，同时要求贷款人停止发放尚未划付的贷款、提前收回已发放的贷款本息的情形；</p>
     <p>（2）乙方、丙方违反主合同、保证合同及本质押合同项下约定，致使贷款方要求甲方履行代偿义务的；</p>
@@ -23,7 +23,7 @@
     <p>（2）贷款方本息损失及甲方的代偿损失；</p>
     <p>（3）甲方收取丙方<strong><u>5%</u></strong>的违约金；</p>
     <p>（4）甲方代贷款方收缴其与丙方所约定的有关违约金；</p>
-{% elif counter_typ in D_COUNTER_TYP_LIST %}
+{% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、发生下列事项之一时，甲方有权行使抵押权，可以与乙方协议以抵押财产折价，或者以拍卖、变卖抵押财产的价款优先受偿，或者<strong>有权申请法院依法强制执行抵押财产</strong>，所得价款不足以清偿本合同项下所担保的债权的，甲方可以选择将该款项用于归还本金、利息、罚息、复利或者费用等：</p>
     <p>（1）主合同项下债务履行期限届满，贷款人未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主合同项下债务履行期限届满，以及借款人依照国家法律法规规定或者主合同的约定宣布主合同项下债权提前到期的情形；</p>
     <p>（2）乙方、丙方违反主合同、保证合同及本抵押合同项下约定，致使贷款人要求甲方履行代偿义务的；</p>
