--- a/A_dbms/templates/dbms/custom/custom-scan.html
+++ b/A_dbms/templates/dbms/custom/custom-scan.html
@@ -13,6 +13,7 @@
         {% include 'dbms/custom/modl/trustee-add-mod.html' %}
         {% include 'dbms/custom/modl/trustee-del-mod.html' %}
         {% include 'dbms/custom/modl/spouse-add-mod.html' %}
+        {% include 'dbms/custom/modl/spouse-del-mod.html' %}
 
         {% include 'dbms/custom/modl/custom-article-add-mod.html' %}
     </div>
@@ -26,6 +27,7 @@
     {% include 'dbms/custom/extra/js-trustee-add.html' %}
     {% include 'dbms/custom/extra/js-trustee-del.html' %}
     {% include 'dbms/custom/extra/js-spouse-add.html' %}
+    {% include 'dbms/custom/extra/js-spouse-del.html' %}
     {% include 'dbms/article/extra/js-article-add.html' %}
 
     {% include 'dbms/js/js-search-custom.html' %}
