--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/counter-home-y.html
@@ -4,16 +4,22 @@
         (31, '应收质押'), (32, '股权质押'), (33, '票据质押'), (34, '动产质押'),
         (41, '其他权利质押'),
         (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))-->
-{% if counter_typ == 1 %}
+{% if counter_obj.assure_counter.custome.all %}
     {% for custom in counter_obj.assure_counter.custome.all %}
-        <p><strong>反担保保证人（乙方）：{{ custom.name }}</strong></p>
-        <p>住所（地址）：{{ custom.company_custome.registered_addr }}</p>
-        <p>法定代表人：{{ custom.company_custome.representative }}</p>
-    {% endfor %}
-{#            (51, '股权预售'), (52, '房产预售'), (53, '土地预售'))#}
-{% elif counter_typ == 2 %}
-    {% for custom in counter_obj.assure_counter.custome.all %}
-        <p><strong>反担保保证人（乙方）：{{ custom.name }}{% if custom.person_custome.spouses %}、{{ custom.person_custome.spouses.name }}{% endif %}</strong></p>
+        {% if custom.genre == 1 %}
+            <p><strong>反担保保证人（乙方）：{{ custom.name }}</strong></p>
+            <p>住所（地址）：{{ custom.company_custome.registered_addr }}</p>
+            <p>法定代表人：{{ custom.company_custome.representative }}</p>
+        {% elif custom.genre == 2 %}
+            <p><strong>反担保保证人（乙方）：{{ custom.name }}</strong></p>
+            <p>住所（地址）：{{ custom.person_custome.license_addr }}</p>
+            <p>身份证号码：{{ custom.person_custome.license_num }}</p>
+            {% if custom.person_custome.spouses %}
+                <p><strong>反担保保证人（乙方）：{{ custom.person_custome.spouses.name }}</strong></p>
+                <p>住所（地址）：{{ custom.person_custome.spouses.person_custome.license_addr }}</p>
+                <p>身份证号码：{{ custom.person_custome.spouses.person_custome.license_num }}</p>
+            {% endif %}
+        {% endif %}
     {% endfor %}
     {#MORTGAGE_COUNTER_TYP_LIST = [11, 12, 13, 14, 15, ]#}
 {% else %}
@@ -24,19 +30,17 @@
         {% if forloop.first %}
             {#(1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程')#}
             {% if warrant.ownership_warrant.all %}
-                {% if warrant.ownership_warrant.all.0.owner.genre == 1 %}
-                    {% for ownership in warrant.ownership_warrant.all %}
+                {% for ownership in warrant.ownership_warrant.all %}
+                    {% if ownership.owner.genre == 1 %}
                         <p><strong>抵押人（乙方）：{{ ownership.owner.name }}</strong></p>
                         <p>住所（地址）：{{ ownership.owner.company_custome.registered_addr }}</p>
                         <p>法定代表人：{{ ownership.owner.company_custome.representative }}</p>
-                    {% endfor %}
-                {% else %}
-                    <p><strong>抵押人（乙方）：
-                        {% for ownership in warrant.ownership_warrant.all %}
-                            {{ ownership.owner.name }}{% if not forloop.last %}、{% endif %}
-                        {% endfor %}
-                    </strong></p>
-                {% endif %}
+                    {% elif ownership.owner.genre == 2 %}
+                        <p><strong>抵押人（乙方）：{{ ownership.owner.name }}</strong></p>
+                        <p>住所（地址）：{{ ownership.owner.person_custome.license_addr }}</p>
+                        <p>身份证号码：{{ ownership.owner.person_custome.license_num }}</p>
+                    {% endif %}
+                {% endfor %}
                 {#(11, '应收账款')#}
             {% elif warrant.warrant_typ == 11 %}
                 <p><strong>出质人（乙方）：{{ warrant.receive_warrant.receive_owner.name }}</strong></p>
