--- a/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre-1-3.html
@@ -7,9 +7,9 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in X_COUNTER_TYP_LIST %}
+{% if counter_obj.counter_typ in X_COUNTER_TYP_LIST %}
     <p>经丙方要求，乙方同意为保证合同项下甲方给丙方担保的全部款项向甲方提供保证反担保。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
-{% elif counter_typ in D_COUNTER_TYP_LIST %}
+{% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
     <p>经丙方要求，乙方愿意以享有所有权或有权通过抵押方式处分的财产为保证合同项下甲方给丙方担保的全部款项向甲方提供抵押反担保。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
 {% elif counter_warrant_typ == 11 %}
     <p>经丙方要求，乙方同意以其享有的应收账款为保证合同项下甲方给丙方担保的全部款项向甲方提供质押反担保。甲、乙、丙三方根据有关法律、法规规定，经协商一致，特订立如下条款：</p>
