--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/2-property-1-d-z.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/2-property-1-d-z.html
@@ -7,7 +7,7 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in D_COUNTER_TYP_LIST %}
+{% if counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、乙方同意以<strong><u>{{ counter_property_type }}</u></strong>设定抵押。前述抵押财产详见附件《抵押财产清单》。该抵押财产清单为本合同组成部分，与本合同具有同等法律效力。</p>
     <p>2、上述抵押财产暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对抵押财产进行处分的估价依据，也不构成对甲方行使抵押权的任何限制。抵押财产的最终价值以抵押权实现时实际处理抵押财产所得价款为准。</p>
 {% elif counter_warrant_typ == 11 %}
@@ -15,11 +15,7 @@
     <p>2、上述应收账款设定质押时，乙方对应收账款付款人和/或第三方的合法、有效债权以及与应收账款相关的其他权利和利益一并质押给甲方，包括但不限于应收账款本金、利息、违约金、损害赔偿金，以及担保权利、保险权益等所有主债权的从债权以及与主债权相关的其他权益。</p>
     <p>3、上述出质应收账款暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质应收账款进行处分的估价依据，也不构成对甲方行使质权的任何限制。质权的最终价值以质权实现时实际处理出质应收账款所得价款为准。</p>
 {% elif counter_warrant_typ == 21 %}
-    {% if agree_typ == 1 or agree_typ == 41 %}
-        <p>1、乙方同意以其在<strong><u>{{ counter_stock_obj.target }}</u></strong>的股权（占该公司的股权比例为<strong><u>{{ counter_stock_obj.ratio }}%</u></strong>）出质。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
-    {% elif  agree_typ == 2 or agree_typ == 42 %}
-        <p>1、乙方同意以其享有所有权的在<strong><u>{{ counter_stock_obj.target }}的{{ counter_stock_obj.ratio }}%股权（对应应缴注册资本人民币{{ stock_registe_str }}万元整，实缴出资人民币{{ stock_share_str }}万元整，大写：{{ agree_share_cn }}）</u></strong>设定质押。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
-    {% endif %}
+    <p>1、乙方同意以其享有所有权的在<strong><u>{{ counter_stock_obj.target }}的{{ counter_stock_obj.ratio }}%股权（对应应缴注册资本人民币{{ stock_registe_str }}万元整，实缴出资人民币{{ stock_share_str }}万元整，大写：{{ agree_share_cn }}）</u></strong>设定质押。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
     <p>2、上述出质权利暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质权利进行处分的估价依据，也不构成对甲方行使质权的任何限制。出质权利的最终价值以质权实现时实际处理出质权利所得价款为准。</p>
     <p>3、质押权利派生权益，系指质押权利的从权利、孳息及法律法规规定的财产权利，质权的效力及于出质权利的从权利和孳息，该派生权利必须记入甲方指定的保管账户内，作为本质押项下贷款偿付的保证。</p>
 {% elif counter_warrant_typ == 31 %}
@@ -27,7 +23,7 @@
     <p>2、上述出质权利暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质权利进行处分的估价依据，也不构成对甲方行使质权的任何限制。出质权利的最终价值以质权实现时实际处理出质权利所得价款为准。</p>
     <p>3、质押权利派生权益，系指质押权利的从权利、孳息及法律法规规定的财产权利，质权的效力及于出质权利的从权利和孳息，该派生权利必须记入甲方指定的保管账户内，作为本质押项下贷款偿付的保证。</p>
 {% elif counter_warrant_typ == 55 %}
-    {% if other_typ == 21 %}
+    {% if counter_other_obj.other_typ == 21 %}
         <p>1、乙方同意以其名下总价值<strong><u>{{ cost_str }}万元</u></strong>（人民币大写金额：<strong><u>{{ cost_cn }}</u></strong>）的{{ counter_other_obj.get_other_typ_display }}出质。上述出质权利详见《质押权利清单》，该质押权利清单为本合同组成部分，与本合同具有同等法律效力。</p>
         <p>2、上述出质权利暂作价________________________（币种及大写金额），但该价格并不作为甲方依据本合同对出质权利进行处分的估价依据，也不构成对甲方行使质权的任何限制。出质权利的最终价值以质权实现时实际处理出质权利所得价款为准。</p>
         <p>3、质押权利派生权益，系指质押权利的从权利、孳息及法律法规规定的财产权利，质权的效力及于出质权利的从权利和孳息，该派生权利必须记入甲方指定的保管账户内，作为本质押项下贷款偿付的保证。</p>
