--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/loan-single-2.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/loan-single-2.html
@@ -1,10 +1,12 @@
-<div class="split">
+<div class="split"><!--封面-->
     {% include 'dbms/agree/agree_board/loan_en/01-cover.html' %}
 </div>
-<div>
+
+<div class="split"><!--正文-->
     <div>{% include 'dbms/agree/agree_board/loan_en/02-hp.html' %}</div>
-    <div>{% include 'dbms/agree/agree_board/loan_en/e-01-text.html' %}</div>
+    <div>{% include 'dbms/agree/agree_board/loan_en/e-01-text-2.html' %}</div>
 </div>
-<div style="padding-top: 25pt">
+
+<div class="split"> <!--签字页-->
     <div>{% include 'dbms/agree/agree_board/loan_en/s-sp.html' %}</div>
 </div>
