--- a/A_dbms/templates/dbms/agree/agree_board/loan_en/s-sp.html
+++ b/A_dbms/templates/dbms/agree/agree_board/loan_en/s-sp.html
@@ -1,16 +1,40 @@
 <p>本页为签字页（无正文）。</p>
 <div class="sign-page">
     <div class="sign-page-y">
-        <p>借款人(公章或合同专用章）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
-        <p>
-            法定代表人或负责人或授权代表：<strong><u>{{ agree_obj.lending.summary.custom.company_custome.representative }}</u></strong>
-        </p>
-        <p>（签字或盖章）</p>
-        {% include 'dbms/agree/agree_board/sign-date.html' %}
+        {% if agree_obj.lending.summary.custom.genre == 1 %}
+            <p>借款人(公章或合同专用章）：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+            <p>法定代表人（或负责人或授权代理人）：<u><strong>{{ agree_obj.lending.summary.custom.company_custome.representative }}</strong></u></p>
+            <p>（签字或盖章）</p>
+            {% include 'dbms/agree/agree_board/sign-date.html' %}
+        {% elif agree_obj.lending.summary.custom.genre == 2 %}
+            <p>借款人：<strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+            <p>本人（经营者）或授权代理人</p>
+            <p>（签字）</p>
+            {% include 'dbms/agree/agree_board/sign-date.html' %}
+        {% endif %}
+    </div>
+    <div class="sign-page-y">
+        {% if agree_obj.lending.summary.borrower.all %}
+            {% for borrower in agree_obj.lending.summary.borrower.all %}
+                <div style="padding-bottom: 15pt">
+                    {% if borrower.genre == 1 %}
+                        <p>借款人(公章或合同专用章）：<strong><u>{{ borrower.name }}</u></strong></p>
+                        <p>法定代表人（或负责人或授权代理人）：<u><strong>{{ borrower.company_custome.representative }}</strong></u></p>
+                        <p>（签字或盖章）</p>
+                        {% include 'dbms/agree/agree_board/sign-date.html' %}
+                    {% elif borrower.genre == 2 %}
+                        <p>借款人：<strong><u>{{ borrower.name }}</u></strong></p>
+                        <p>本人（经营者）或授权代理人</p>
+                        <p>（签字）</p>
+                        {% include 'dbms/agree/agree_board/sign-date.html' %}
+                    {% endif %}
+                </div>
+            {% endfor %}
+        {% endif %}
     </div>
     <div class="sign-page-j">
-        <p>贷款人（公章或合同专用章）：{{ UN }}</p>
-        <p>法定代表人或负责人或授权代表：黄一平</p>
+        <p>贷款人（公章或合同专用章）：成都武侯武兴小额贷款有限责任公司</p>
+        <p>法定代表人（或负责人或授权代理人）：黄一平</p>
         <p>（签字或盖章）</p>
         {% include 'dbms/agree/agree_board/sign-date.html' %}
     </div>
