--- a/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
+++ b/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
@@ -8,7 +8,7 @@
     <p>二、本合同所称分离式保函是指银行应甲方申请出具的以乙方为被保证人的一系列保函（包括但不限于投标保函、履约保函、预付款保函、民工工资保函等），该分离式保函业务占用甲方在银行的授信额度，甲方就以乙方为被保证人的一系列分离式保函承担了连带保证责任。</p>
     <p>三、甲、乙双方一致确认，分离式保函最高额为<strong><u>人民币{{ agree_amount_str }}万元（大写：{{ agree_amount_cn }}）</u></strong>，保函出具期间为{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}。</p>
     <p>在保函出具期间内的任一时点，只要甲方尚未收回的分离式保函余额不超过分离式保函最高额，甲方可以连续、循环地为乙方申请出具分离式保函，而不论次数和每次的金额，也不论每份分离式保函的到期日是否超过保函出具期间。</p>
-    <p>乙方办理每一份分离式保函，甲方为此需向银行签署一份<strong><u>{{ file_name }}</u></strong>并对每一份分离式保函承担连带保证责任。上述一系列<strong><u>{{ file_name }}</u></strong>包括但不限于：
+    <p>乙方办理每一份分离式保函，甲方为此需向银行签署一份<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>并对每一份分离式保函承担连带保证责任。上述一系列<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>包括但不限于：
     <u>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
@@ -18,8 +18,8 @@
         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</u>
     </p>
-    <p>（一） 担保范围：与甲方和银行自{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}期间签订的一系列<strong><u>{{ file_name }}</u></strong>中约定的担保范围一致。但保函总额不超过<strong><u>人民币{{ agree_amount_cn }}</u></strong>及相应的利息、违约金、实现债权的费用等。</p>
-    <p>（二）担保期限：与甲方和银行自{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}期间签订的一系列<strong><u>{{ file_name }}</u></strong>中约定的保证期间一致。</p>
+    <p>（一） 担保范围：与甲方和银行自{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}期间签订的一系列<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>中约定的担保范围一致。但保函总额不超过<strong><u>人民币{{ agree_amount_cn }}</u></strong>及相应的利息、违约金、实现债权的费用等。</p>
+    <p>（二）担保期限：与甲方和银行自{% include 'dbms/agree/agree_board/date-period.html' %}至{% include 'dbms/agree/agree_board/date-period.html' %}期间签订的一系列<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>中约定的保证期间一致。</p>
     <p>四、当受益人索偿时，甲方有权独立判断索赔要求及索赔金额是否符合保函约定；甲方对外赔付，无须事先征得乙方同意，且该付款行为不受乙方与受益人之间基础合同纠纷的影响，乙方承诺不提出任何异议。</p>
     <p>五、银行向受益人赔付，甲方因此向银行偿还其赔付款项或甲方直接向受益人赔付后，甲方有权向乙方追偿下列款项：</p>
     <p>（一）甲方直接向受益人赔付或向银行偿还的全部金额及自赔付或偿还之日起的利息（按银行同期贷款基准利率<strong><u>4</u></strong>倍计息）；</p>
@@ -32,10 +32,10 @@
     <p>2、按以下约定执行：按照担保总额的<strong><u>{{ single_quota_rate }}%</u></strong>收取。</p>
     <p>（二）具体数额：按以下第<strong><u>2</u></strong>项执行：</p>
     <p>1、一次收取担保费金额为：人民币<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>万元。</p>
-    <p>2、按甲方与银行签订每一份<strong><u>{{ file_name }}</u></strong>时确认的担保额度、担保期限，按本合同确定的担保费率计算收取；</p>
+    <p>2、按甲方与银行签订每一份<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>时确认的担保额度、担保期限，按本合同确定的担保费率计算收取；</p>
     <p>3、<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>。</p>
     <p>（三）收取时间：按以下第<strong><u>1</u></strong>项执行：</p>
-    <p>1、乙方于甲方每次向银行出具<strong><u>{{ file_name }}</u></strong>前将该笔担保所涉及的担保费款项支付给甲方。</p>
+    <p>1、乙方于甲方每次向银行出具<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>前将该笔担保所涉及的担保费款项支付给甲方。</p>
     <p>2、于担保期内每年的<u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日前支付当年的担保费。 </p>
     <p>3、<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>。</p>
     <p>（四）收取方式：<strong><u>现金或转账支付</u></strong>。</p>
