--- a/A_dbms/templates/dbms/agree/preview-counter.html
+++ b/A_dbms/templates/dbms/agree/preview-counter.html
@@ -20,21 +20,21 @@
         <input style="display: none" name="counter_id" id="id_counter_id" value={{ counter_obj.id }}>
     </div>
     <div id="view-save">
+        {#(1, '单笔')#}
         {% if agree_obj.agree_typ == 1 %}
-            {#            (1, '单笔')#}
-            {% if counter_obj.counter_typ == 1 %}
+            {% if counter_obj.counter_typ == 1 %}<!-- (1, '企业担保')-->
                 {% include 'dbms/agree/agree_board/counter/c-s-x.html' %}
-            {% elif counter_obj.counter_typ == 2 %}
+            {% elif counter_obj.counter_typ == 2 %}<!-- (2, '个人保证')-->
                 {% include 'dbms/agree/agree_board/counter/c-s-g.html' %}
-            {% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
+            {% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}<!-- COUNTER_TYP_D = [11, 12, 13, 14, 15, ]  # 抵押类（反）担保合同类型-->
                 {% include 'dbms/agree/agree_board/counter/c-s-d.html' %}
-            {% elif counter_obj.counter_typ in Z_COUNTER_TYP_LIST %}
+            {% elif counter_obj.counter_typ in Z_COUNTER_TYP_LIST %}<!-- COUNTER_TYP_Z = [31, 32, 33, 34, 41, ]  # 质押类（反）担保合同类型-->
                 {% include 'dbms/agree/agree_board/counter/c-s-z.html' %}
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
+        {#(2, '最高额')#}
         {% elif agree_obj.agree_typ == 2 %}
-            {#            (2, '最高额')#}
             {% if counter_obj.counter_typ == 1 %}
                 {% include 'dbms/agree/agree_board/counter/c-m-x.html' %}
             {% elif counter_obj.counter_typ == 2 %}
@@ -46,10 +46,11 @@
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
+        {#(4, 'D-委贷')#}
         {% elif agree_obj.agree_typ == 4 %}
             <p>！！！！！！！(4, 'D-委贷'),！！！！！！！</p>
+        {#(21, 'D-分离式保函')#}
         {% elif agree_obj.agree_typ == 21 %}
-            {#            (21, 'D-分离式保函'),#}
             {% if counter_obj.counter_typ == 1 %}
                 {% include 'dbms/agree/agree_board/counter/c-m-x.html' %}
             {% elif counter_obj.counter_typ == 2 %}
@@ -61,8 +62,8 @@
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
-        {% elif agree_obj.agree_typ == 22 %}
-            {#            (22, '公司保函')#}
+        {#(22, 'D-公司保函')#}
+        {% elif agree_obj.agree_typ == 22 %}<!--(22, '公司保函')-->
             {% if counter_obj.counter_typ == 1 %}
                 {% include 'dbms/agree/agree_board/counter/c-s-x-l.html' %}
             {% elif counter_obj.counter_typ == 2 %}
@@ -74,8 +75,8 @@
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
-        {% elif agree_obj.agree_typ == 41 %}
-            {#(41, '单笔(公证)')#}
+        {#(41, 'D-单笔(公证)')#}
+        {% elif agree_obj.agree_typ == 41 %}<!--(41, '单笔(公证)')-->
             {% if counter_obj.counter_typ == 1 %}
                 {% include 'dbms/agree/agree_board/counter/c-s-x-n.html' %}
             {% elif counter_obj.counter_typ == 2 %}
@@ -87,10 +88,11 @@
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
-        {% elif agree_obj.agree_typ == 42 %}
+        {#(42, 'D-最高额(公证)')#}
+        {% elif agree_obj.agree_typ == 42 %}<!--(42, 'D-最高额(公证)')-->
             <p>！！！！！！！(42, 'D-最高额(公证)'),！！！！！！！</p>
-        {% elif agree_obj.agree_typ == 51 %}
-            {#(51, 'X-小贷单笔')#}
+        {#(51, 'X-小贷单笔')#}
+        {% elif agree_obj.agree_typ == 51 %}<!--(51, 'X-小贷单笔')-->
             {% if counter_obj.counter_typ == 1 or counter_obj.counter_typ == 2 %}
                 {% include 'dbms/agree/agree_board/loan_co/l-c-s-x.html' %}
             {% elif counter_obj.counter_typ in D_COUNTER_TYP_LIST %}
@@ -100,6 +102,7 @@
             {% else %}
                 <p>！！！！！！！还未添加合同模板，请联系系统管理员！！！！！！！</p>
             {% endif %}
+        {#(52, 'X-小贷最高额')#}
         {% elif agree_obj.agree_typ == 52 %}
             <p>！！！！！！！(52, 'X-小贷最高额'),！！！！！！！</p>
         {% else %}
