--- a/A_dbms/templates/dbms/custom/scan/tab/spouse.html
+++ b/A_dbms/templates/dbms/custom/scan/tab/spouse.html
@@ -8,16 +8,18 @@
             <th>联系电话</th>
             <th>身份证号码</th>
             <th>身份证地址</th>
+            <th>操作</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
+        <tbody id="spouses-tb" >
+        <tr spouses-nid="{{ custom_obj.person_custome.spouses.id }}">
             <td>{{ custom_obj.person_custome.spouses.name }}</td>
             <td>{{ custom_obj.person_custome.spouses.contact_addr }}</td>
             <td>{{ custom_obj.person_custome.spouses.linkman }}</td>
             <td>{{ custom_obj.person_custome.spouses.contact_num }}</td>
             <td>{{ custom_obj.person_custome.spouses.person_custome.license_num }}</td>
             <td>{{ custom_obj.person_custome.spouses.person_custome.license_addr }}</td>
+            <td><a class="btn btn-primary btn-xs delSpousesB">解除夫妻关系</a></td>
         </tr>
         </tbody>
     </table>
